# jp_tool

./: .gitignore  CLAUDE.md  Flutter桌面应用打包教程.txt  LICENSE  flutter打包.bat  flutter打包Gemini版.bat  jp_grammar_analyzer.lnk  jp_manager.ccs  readme.md  test.html  停止.bat  停止开发.bat  启动.bat  启动开发.bat  打包.bat
.github/workflows/: release-windows.yml
backend/: build_windows.bat  main.py  pyproject.toml
backend/analyzer/: ginza_runtime.py  grammar_db.py  models.py  tokenizer.py
backend/capture/: clipboard.py  http_receiver.py
backend/data/: jlpt_grammar.json
backend/llm/: __init__.py  api_provider.py  base.py  claude_provider.py  ollama_provider.py  prompt_templates.py
backend/storage/: analysis_store.py  dictionary_db_template.md  grammar_store.py  settings_store.py
backend/tools/: inspect_dictionary_sqlite.py
cache/: jamdict_cn_profile.json  jamdict_cn_profile.md
frontend/: README.md  pubspec.yaml  setup_windows.bat
frontend/lib/: main.dart
frontend/lib/models/: analysis_result.dart
frontend/lib/screens/: analysis_screen.dart  llm_config_screen.dart  resource_settings_screens.dart  settings_screen.dart  shortcut_config_screen.dart
frontend/lib/services/: websocket_service.dart
frontend/lib/theme/: font_styles.dart
frontend/test/: widget_test.dart
frontend/web/: flutter_bootstrap.js  index.html  manifest.json
frontend/windows/: CMakeLists.txt
luna_plugin/: jp_tool_sender.py
test/: README.md  luna_ws_capture_latest.jsonl  luna_ws_capture_latest_summary.json  luna_ws_probe.py
web_frontend_tmp/: jp_manager.html
(+13 files in other folders)
