[project]
name = "jp-grammar-analyzer"
version = "0.1.0"
description = "Real-time Japanese grammar analyzer for Galgame"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "websockets>=13.0",
    "pydantic>=2.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
clipboard = ["pyperclip>=1.9.0"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"
